alles door de validator gehaald

--- a/HTML/Nagerecht.html
+++ b/HTML/Nagerecht.html
@@ -4,7 +4,7 @@ Week 5 - HTML, CSS
 opdracht: Week 5 - Gehaktbrood -->
 
 <!DOCTYPE html>
-<html>
+<html lang="NL">
 <head>
 	<title>Week 5 - Tiramisu wafels</title>
 	<link rel="stylesheet" type="text/css" href="../CSS/Week-5.css">
