tweede paragraaf toegevoegd

--- a/HTML/Startpagina.html
+++ b/HTML/Startpagina.html
@@ -22,18 +22,21 @@ opdracht: Week 5 - Gehaktbrood -->
 <div class="startpagina">
 	<h1>Carpaccio bonbons met courgette</h1>
 	<p>Deze bol van carpaccio is een feestje om uit te pakken en is gevuld met o.a. courgette en gedroogde tomaat.</p>
+	<p>Maak gebruik van het menu bovenaan de pagina om het recept en de bereidingswijze te vinden.</p>
 </div>
 <img class="startpagina-foto" src="../IMG/carpaccio.jpg" alt="carpaccio">
 
 <div class="startpagina">
 	<h1>Gehaktbrood</h1>
 	<p>Dit gehaktbrood kan prima bij een avondmaaltijd, maar is ook een makkelijk gerecht voor een buffet.</p>
+	<p>Maak gebruik van het menu bovenaan de pagina om het recept en de bereidingswijze te vinden.</p>
 </div>
 <img class="startpagina-foto" src="../IMG/gehaktbrood.jpg" alt="gehaktbrood">
 
 <div class="startpagina">
 	<h1>Tiramisu wafels</h1>
 	<p>Wafels met koffiesmaak geserveerd met mascarpone en cacao. Lekker als toetje of gebak bij koffie of thee.</p>
+	<p>Maak gebruik van het menu bovenaan de pagina om het recept en de bereidingswijze te vinden.</p>
 </div>
 <img class="startpagina-foto" src="../IMG/wafels.jpg" alt="Tiramisu wafels">
 
